# rixeval

./: pyproject.toml
data/: counterfactual_explanations_1.csv  counterfactual_explanations_2.csv  counterfactual_explanations_3.csv  counterfactual_explanations_4.csv  explanations_table.csv  histogram_explanations.csv  pdp_explanations.csv
jupyter/: chat_tmp.txt  conversations.ipynb  data_chats.ipynb  data_new.ipynb  dataload.ipynb  main.ipynb  temp.ipynb
jupyter/experiments/ARXIV/first_prompt_variations/: combinations.txt  config.json  results.parquet
jupyter/experiments/Chat Prompt Mode, Think Mode [0:30]/: combinations.txt  config.json  results.parquet  run.txt
jupyter/experiments/Chat Prompt Mode, Think Mode [30:]/: results.parquet  run.txt
jupyter/experiments/done/new_promptvariation_bias/: combinations.txt  config.json  (+2 more)
jupyter/experiments/prompt_variations_exclusion_pdp-histogram/: results.parquet
jupyter/experiments/prompt_variations_exclusion_shap-lime/: combinations.txt
jupyter/experiments/promptvariations_accuracy_12:57:40_30.05/: results.parquet
jupyter/experiments/temp/: combinations.txt  config.json  raw_responses.jsonl  results.parquet  run.txt
rixeval/: analysis.py  dataload.py  load_chats.py  runner.py  setup.py
rixeval/prompt_pieces/: __init__.py  bias.py  cot.py  direct_answers.py  prompt_types_emotional.py  prompt_types_rational.py
rixeval/prompt_pieces_chats/: __init__.py  prompt_types_emotional.py  prompt_types_rational.py
rixeval/prompts/: __init__.py  ai_distrust.py  ai_trust.py  cot.py  direct_answers.py  emotional_tone.py
(+40 files in other folders)
