[project]
name = "RIXEval"
version = "0.1.0"
authors = [
  { name="Finn Schwall", email="finn.schwall@isob.fraunhofer.de" },
]
description = "Python abstraction layer for large language models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
]
[project.optional-dependencies]

[tool.setuptools.packages.find]
include = ["rixeval*"]
[project.urls]
"Homepage" = "https://github.com/finnschwall/rixeval"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
